# fbrage

./: .eslintrc.cjs  .prettierignore  .prettierrc  Containerfile  README.md  build.sh  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  dependabot-validate.yml
nginx/: nginx.conf
rage-webassembly/: Cargo.toml
rage-webassembly/src/: ageutil.rs  error.rs  lib.rs
src/: app.html  global.d.ts
src/lib/: clipboard.ts  private_key_store.ts  public_key_store.ts  storage.ts
src/lib/components/: CopyToClipboard.svelte  CreateRecipientForm.svelte  DecryptForm.svelte  EncryptForm.svelte  ErrorMessage.svelte  ImportPublicKeys.svelte  Message.svelte  PrivateKeyCard.svelte  PublicKeyPicker.svelte  RecipientCard.svelte
src/lib/scss/: global.scss
src/routes/: +layout.svelte  +page.svelte  global.scss
src/routes/decrypt/: +page.svelte
src/routes/decrypt-file/: +page.svelte
src/routes/decrypt-hash/: +page.svelte
src/routes/encrypt/: +page.svelte
src/routes/encrypt-file/: +page.svelte
src/routes/gen-key/: +page.svelte
src/routes/private-key/: +page.svelte
src/routes/public-keys/: +page.svelte
static/: manifest.json
static/logo/: logo.xcf
test-keys/: test.key  test.key.pub
