[package]
name = "rage-webassembly"
version = "0.1.0"
authors = ["Patrick Haun <patrick@bomgar.email>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
age = { version = "0.10.0", features = ["armor"] }
getrandom2 = {package="getrandom", version = "0.2", features = ["js"] }
getrandom1 = {package="getrandom", version = "0.1", features = ["wasm-bindgen"] }
js-sys = "0.3.65"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde-wasm-bindgen = "0.6.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.38"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
